[package]
name = "snes_spc-sys"
version = "0.1.0"
authors = ["naari3 <naari.named@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
id666-rs = { git = "https://github.com/naari3/id666-rs-bind", rev = "49778b1" }
hound = "3.4"

[build-dependencies]
bindgen = "0.57.0"
cc = { version = "1.0.66", features = ["parallel"] }
